--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,14 @@
 @font-face {
   font-family: InstrumentSans;
   src: url("$fonts/InstrumentSans-VariableFont_wdth,wght.ttf") format("opentype");
+  font-display: swap;
 }
 
 @font-face {
   font-family: InstrumentSans;
   font-style: italic;
   src: url("$fonts/InstrumentSans-Italic-VariableFont_wdth,wght.ttf") format("opentype");
+  font-display: swap;
 }
 
 @layer base {
